Consolidate game start logic